--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arqtwan - Licencia de Construcción</title>
+
+    <!-- Verificación de Google -->
+    <meta name="google-site-verification" content="o0HdO8HkEtZiGqGIS2KYd91j7IE8fGOWgMSSIqJjJbg" />
+
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <!-- Encabezado con menú hamburguesa -->
     <header>
@@ -103,4 +106,5 @@
     </footer>
 </body>
 </html>
+
 
