--- a/index.html
+++ b/index.html
@@ -1,110 +1,318 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="es-CO">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arqtwan - Licencia de Construcción</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <!-- Verificación de Google -->
+  <meta name="google-site-verification" content="o0HdO8HkEtZiGqGIS2KYd91j7IE8fGOWgMSSIqJjJbg" />
 
-    <!-- Verificación de Google -->
-    <meta name="google-site-verification" content="o0HdO8HkEtZiGqGIS2KYd91j7IE8fGOWgMSSIqJjJbg" />
+  <link rel="stylesheet" href="styles.css">
+  <title>Arqtwan - Licencias de Construcción, Arquitectura e Ingeniería</title>
+  <meta name="description" content="Arqtwan gestiona licencias de construcción y ofrece diseño arquitectónico y estructural para que tu proyecto cumpla la normativa sin complicaciones." />
+  <meta name="robots" content="index, follow, max-image-preview:large" />
 
-    <link rel="stylesheet" href="styles.css">
+  <!-- Canonical + idioma (GitHub Pages) -->
+  <link rel="canonical" href="https://arqtwan.github.io/Arqtwanpageadmin.github.io/" />
+  <link rel="alternate" href="https://arqtwan.github.io/Arqtwanpageadmin.github.io/" hreflang="es-CO" />
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="es_CO" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Arqtwan | Licencias de Construcción y Trámites de Ingeniería" />
+  <meta property="og:description" content="Trámites ágiles, cumplimiento normativo y diseño profesional en Colombia." />
+  <meta property="og:url" content="https://arqtwan.github.io/Arqtwanpageadmin.github.io/" />
+  <meta property="og:site_name" content="Arqtwan" />
+  <meta property="og:image" content="https://arqtwan.github.io/Arqtwanpageadmin.github.io/arqtwan.jpg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Arqtwan | Licencias de Construcción" />
+  <meta name="twitter:description" content="Gestionamos licencias y diseñamos soluciones arquitectónicas y estructurales." />
+  <meta name="twitter:image" content="https://arqtwan.github.io/Arqtwanpageadmin.github.io/arqtwan.jpg" />
+
+  <!-- PWA / meta básicos -->
+  <link rel="icon" href="./favicon.ico" sizes="any">
+  <link rel="icon" href="./icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  <meta name="theme-color" content="#0b2535">
+
+  <!-- Preloads (mejor LCP) -->
+  <link rel="preload" as="image" href="./arqtwan.jpg" imagesrcset="./arqtwan.jpg" imagesizes="100vw">
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Fuentes -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <!-- Estilos -->
+  <link rel="stylesheet" href="./styles.css?v=2" />
+
+  <!-- Datos estructurados: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Arqtwan",
+    "url":"https://arqtwan.github.io/Arqtwanpageadmin.github.io/",
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://arqtwan.github.io/Arqtwanpageadmin.github.io/?s={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Datos estructurados: LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"LocalBusiness",
+    "name":"Arqtwan",
+    "url":"https://arqtwan.github.io/Arqtwanpageadmin.github.io/",
+    "image":"https://arqtwan.github.io/Arqtwanpageadmin.github.io/arqtwan.jpg",
+    "logo":"https://arqtwan.github.io/Arqtwanpageadmin.github.io/LogoArqtwan.jpg",
+    "telephone":"+57-304-301-8508",
+    "priceRange":"$$",
+    "areaServed": { "@type":"Country", "name":"CO" },
+    "address":{"@type":"PostalAddress","addressCountry":"CO"},
+    "openingHoursSpecification":[{
+      "@type":"OpeningHoursSpecification",
+      "dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],
+      "opens":"08:00","closes":"18:00"
+    }]
+  }
+  </script>
+
+  <!-- Datos estructurados: FAQPage -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"FAQPage",
+    "mainEntity":[
+      {
+        "@type":"Question",
+        "name":"¿Qué incluye la gestión de la licencia de construcción?",
+        "acceptedAnswer":{"@type":"Answer","text":"Revisión de requisitos, radicación, seguimiento, respuesta a observaciones y entrega de la licencia."}
+      },
+      {
+        "@type":"Question",
+        "name":"¿Realizan diseños arquitectónicos y estructurales?",
+        "acceptedAnswer":{"@type":"Answer","text":"Sí, desarrollamos anteproyecto y proyecto, memorias de cálculo (NSR) y licencias según normativa colombiana."}
+      },
+      {
+        "@type":"Question",
+        "name":"¿Atienden fuera de Bogotá?",
+        "acceptedAnswer":{"@type":"Answer","text":"Brindamos servicio remoto en todo el país y presencial en zonas aledañas según el alcance del proyecto."}
+      }
+    ]
+  }
+  </script>
 </head>
+
 <body>
-    <!-- Encabezado con menú hamburguesa -->
-    <header>
-        <nav>
-            <div class="logo">
-                <a href="#home">Arqtwan</a>
-            </div>
-            <!-- Checkbox para toggle -->
-            <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="hamburger">&#9776;</label>
-            <ul class="nav-links">
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#about">Sobre Nosotros</a></li>
-                <li><a href="#request-form">Solicitar Licencia</a></li>
-                <li><a href="#contact">Contáctanos</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- Header fijo con menú hamburguesa -->
+  <header class="site-header" role="banner">
+    <nav class="nav" aria-label="Principal">
+      <!-- LOGO imagen -->
+      <div class="logo">
+        <a href="#home" aria-label="Ir al inicio">
+          <img
+            src="./LogoArqtwan.jpg"
+            alt="Arqtwan - Diseño, Arquitectura e Ingeniería"
+            class="logo-img"
+            width="160" height="160"
+            decoding="async" />
+        </a>
+      </div>
 
-    <!-- Imagen de fondo ajustada -->
-    <section id="home" class="hero"></section>
+      <!-- Toggle accesible -->
+      <input type="checkbox" id="menu-toggle" aria-hidden="true" />
+      <label for="menu-toggle" class="hamburger" aria-label="Abrir menú" aria-controls="menu">
+        &#9776;
+      </label>
 
-    <!-- Botón "Solicitar Licencia" debajo de la imagen -->
-    <section id="solicitar-licencia">
-        <div class="container">
-            <a href="#request-form" class="btn">Solicitar Licencia</a>
+      <ul id="menu" class="nav-links">
+        <li><a href="#home">Inicio</a></li>
+        <li><a href="#services">Servicios</a></li>
+        <li><a href="#about">Sobre Nosotros</a></li>
+        <li><a href="#request-form">Solicitar Licencia</a></li>
+        <li><a href="#contact">Contáctanos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO -->
+  <section id="home" class="hero" aria-label="Presentación">
+    <div class="hero-media" role="img" aria-label="Render arquitectónico"></div>
+    <div class="hero-overlay"></div>
+
+    <div class="hero-content">
+      <h1>Construyendo sueños, resolviendo trámites</h1>
+      <p>
+        Gestionamos licencias y diseñamos soluciones arquitectónicas y estructurales
+        para que vendas, construyas o reformes sin complicaciones.
+      </p>
+      <div class="hero-cta">
+        <a href="#request-form" class="btn btn-primary">Solicitar Licencia</a>
+        <a href="https://wa.me/573043018508?utm_source=web&utm_medium=cta&utm_campaign=hero_whatsapp"
+           class="btn btn-ghost" target="_blank" rel="noopener">
+          WhatsApp
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA secundaria -->
+  <section id="solicitar-licencia" class="section-cta">
+    <div class="container">
+      <a href="#request-form" class="btn">Solicitar Licencia</a>
+    </div>
+  </section>
+
+  <!-- Servicios -->
+  <section id="services" class="section" aria-labelledby="servicios-title">
+    <div class="container">
+      <h2 id="servicios-title">Servicios de Licencias de Construcción y Trámites de Ingeniería</h2>
+
+      <div class="services-grid">
+        <article class="service-item">
+          <h3>Licencia de Construcción</h3>
+          <p>Gestionamos de principio a fin tu trámite con seguimiento y requisitos al día.</p>
+        </article>
+
+        <article class="service-item">
+          <h3>Asesoría Legal</h3>
+          <p>Orientación normativa y urbana para viabilizar tu proyecto sin tropiezos.</p>
+        </article>
+
+        <article class="service-item">
+          <h3>Estudios de Impacto Ambiental</h3>
+          <p>Evaluamos el impacto y preparamos la documentación para el cumplimiento regulatorio.</p>
+        </article>
+
+        <article class="service-item">
+          <h3>Diseño Arquitectónico</h3>
+          <p>Propuestas funcionales y estéticas alineadas a tu presupuesto y normativa.</p>
+        </article>
+
+        <article class="service-item">
+          <h3>Diseño Estructural</h3>
+          <p>Cálculo y memoria estructural conforme a estándares vigentes.</p>
+        </article>
+
+        <article class="service-item">
+          <h3>Levantamientos y Reforzamientos</h3>
+          <p Le>Levantamiento in situ y reforzamientos estructurales cuando la obra lo exige.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sobre nosotros -->
+  <section id="about" class="section section-alt" aria-labelledby="sobre-title">
+    <div class="container narrow">
+      <h2 id="sobre-title">Sobre Nosotros</h2>
+      <p>
+        En Arqtwan sumamos más de 10 años acompañando a propietarios, constructoras y arquitectos
+        para que cada proyecto cumpla la normativa técnica, urbana y ambiental. Priorizamos
+        <strong>tiempos confiables</strong>, <strong>documentación impecable</strong> y una
+        <strong>comunicación clara</strong> durante todo el proceso.
+      </p>
+    </div>
+  </section>
+
+  <!-- Formulario -->
+  <section id="request-form" class="section" aria-labelledby="form-title">
+    <div class="container">
+      <h2 id="form-title">Formulario de Solicitud de Licencia</h2>
+
+      <form id="form-tramite" class="form" novalidate>
+        <div class="field">
+          <label for="name">Nombre Completo</label>
+          <input id="name" name="name" type="text" placeholder="Tu nombre" required />
+          <small class="error-msg">Por favor escribe tu nombre.</small>
         </div>
-    </section>
 
-    <!-- Sección de servicios -->
-    <section id="services">
-        <div class="container">
-            <h2>Servicios</h2>
-            <div class="services-grid">
-                <div class="service-item">
-                    <h3>Licencia de Construcción</h3>
-                    <p>Gestionamos todo el proceso para que obtengas tu licencia de construcción de manera rápida y efectiva.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Asesoría Legal</h3>
-                    <p>Te ofrecemos asesoría legal en todos los aspectos relacionados con la construcción y permisos urbanos.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Estudios de Impacto Ambiental</h3>
-                    <p>Realizamos estudios para evaluar el impacto ambiental de tu proyecto y garantizar el cumplimiento normativo.</p>
-                </div>
-            </div>
+        <div class="field">
+          <label for="email">Correo Electrónico</label>
+          <input id="email" name="email" type="email" placeholder="tucorreo@ejemplo.com" required />
+          <small class="error-msg">Ingresa un correo válido.</small>
         </div>
-    </section>
 
-    <!-- Sección sobre nosotros -->
-    <section id="about">
-        <div class="container">
-            <h2>Sobre Nosotros</h2>
-            <p>En Arqtwan, somos un equipo profesional con más de 10 años de experiencia en la gestión de licencias de construcción. Nuestra misión es asegurar que tu proyecto cumpla con todas las normativas legales y ambientales.</p>
+        <div class="field">
+          <label for="phone">Número de Teléfono</label>
+          <input id="phone" name="phone" type="tel" placeholder="304 301 8508" required />
+          <small class="error-msg">Indica un teléfono de contacto.</small>
         </div>
-    </section>
 
-    <!-- Formulario de solicitud de licencia -->
-    <section id="request-form">
-        <div class="container">
-            <h2>Formulario de Solicitud de Licencia</h2>
-            <form id="form-tramite">
-                <input type="text" name="name" placeholder="Nombre Completo" required>
-                <input type="email" name="email" placeholder="Correo Electrónico" required>
-                <input type="tel" name="phone" placeholder="Número de Teléfono" required>
-                <textarea name="message" placeholder="Descripción del Proyecto" required></textarea>
-                <button type="submit" class="btn">Enviar Solicitud</button>
-            </form>
+        <div class="field full">
+          <label for="message">Descripción del Proyecto</label>
+          <textarea id="message" name="message" rows="4" placeholder="Cuéntanos tu caso" required></textarea>
+          <small class="error-msg">Describe brevemente tu proyecto.</small>
         </div>
-    </section>
 
-    <!-- Botón de WhatsApp flotante -->
-    <a href="https://wa.me/573043018508" target="_blank" class="whatsapp-btn">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKJhTfmGEoahUGgcvPcXyyN8jVr6JpZHUQ0g&s" alt="WhatsApp" class="whatsapp-logo">
-    </a>
+        <button type="submit" class="btn btn-primary">Enviar Solicitud</button>
+        <p id="form-ok" class="form-ok" role="status" aria-live="polite"></p>
+      </form>
+    </div>
+  </section>
 
-    <!-- Sección de contacto -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contáctanos</h2>
-            <p>Representante Legal: Anyela Castiblanco, Ingeniera Civil</p>
-            <p>Teléfono de contacto: <strong>3043018508</strong></p>
-        </div>
-    </section>
+  <!-- WhatsApp flotante -->
+  <a href="https://wa.me/573043018508?utm_source=web&utm_medium=fab&utm_campaign=whatsapp"
+     target="_blank" class="whatsapp-btn" aria-label="Escríbenos por WhatsApp">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKJhTfmGEoahUGgcvPcXyyN8jVr6JpZHUQ0g&s"
+         alt="WhatsApp Arqtwan" class="whatsapp-logo" loading="lazy" />
+  </a>
 
-    <!-- Pie de página -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Arqtwan. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+  <!-- Contacto -->
+  <section id="contact" class="section section-brand" aria-labelledby="contact-title">
+    <div class="container">
+      <h2 id="contact-title">Contáctanos</h2>
+      <p>Representante Legal: Anyela Castiblanco, Ingeniera Civil</p>
+      <p>Teléfono de contacto: <strong>3043018508</strong></p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <p>&copy; <span id="year"></span> Arqtwan. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <!-- JS mínimo -->
+  <script>
+    // Año en footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Scroll suave
+    document.querySelectorAll('a[href^="#"]').forEach(a => {
+      a.addEventListener('click', e => {
+        const id = a.getAttribute('href').slice(1);
+        const el = document.getElementById(id);
+        if (el) { e.preventDefault(); el.scrollIntoView({ behavior: 'smooth', block: 'start' }); }
+      });
+    });
+
+    // Validación simple del formulario
+    const form = document.getElementById('form-tramite');
+    const ok = document.getElementById('form-ok');
+    form?.addEventListener('submit', (e) => {
+      e.preventDefault();
+      let valid = true;
+      form.querySelectorAll('[required]').forEach(input => {
+        const field = input.closest('.field');
+        if (!input.checkValidity()) { valid = false; field?.classList.add('invalid'); }
+        else { field?.classList.remove('invalid'); }
+      });
+      if (valid) {
+        ok.textContent = '¡Gracias! Te contactaremos en breve.';
+        form.reset(); setTimeout(() => ok.textContent = '', 4000);
+      }
+    });
+    document.querySelectorAll('.field input, .field textarea').forEach(el => {
+      el.addEventListener('input', () => el.closest('.field')?.classList.remove('invalid'));
+    });
+  </script>
 </body>
 </html>
-
-
